Initial import of remote logging. case 878
* Editor and web-server implementations
* Log-records and processed issues (grouped
  records) are group by month
* Preference option to disable logging. Enabled by
  default
* Simple web interface (log.defold.com)
  - All resources but /post requires admin
    role
  - /post is currently not protected
* Created new jode-time-bundle and removed  
  joda-time from server

--- a/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
@@ -109,6 +109,8 @@
         <module>../com.dynamo.cr.tileeditor.test</module>
         <module>../com.dynamo.cr.properties</module>
         <module>../com.dynamo.cr.properties.test</module>
+        <module>../com.dynamo.cr.rlog</module>
+        <module>../com.dynamo.cr.rlog.test</module>
         <module>../com.dynamo.cr.sceneed</module>
         <module>../com.dynamo.cr.sceneed.test</module>
         <module>../com.dynamo.cr.go</module>
@@ -122,6 +124,7 @@
         <module>../com.dynamo.cr.bob.test</module>
         <module>../com.dynamo.cr.templates</module>
         <module>../javax.media.opengl</module>
+        <module>../joda.time</module>
     </modules>
 
 </project>
