sl4j logging support. case 1331
* Custom appender that forwards logback events
  to eclipse logging system
* Created new bundle for sl4fj (moved from common)
* Removed ILogger
* Replaced all logging using ILog to slf4j
* logback.xml configuration in editor.core
* StatusManager.getManager().handle with StatusManager.SHOW 
  set left untouched. How to show error dialogs
  is still to be decided.

--- a/com.dynamo.cr/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.common/build.properties
@@ -21,15 +21,10 @@ bin.includes = META-INF/,\
                ext/jackson-mapper-asl-1.9.2.jar,\
                ext/jersey-client-1.11.jar,\
                ext/jersey-core-1.11.jar,\
-               ext/slf4j/janino.jar,\
                DYNAMO_HOME/share/java/graphics.jar,\
-               ext/slf4j/logback-classic-1.0.3.jar,\
-               ext/slf4j/logback-core-1.0.3.jar,\
-               ext/slf4j/slf4j-api-1.6.4.jar,\
                DYNAMO_HOME/share/java/resource.jar,\
                DYNAMO_HOME/share/java/engine.jar,\
                DYNAMO_HOME/share/java/upnp.jar,\
                ext/commons-configuration-1.8.jar,\
                ext/commons-lang-2.6.jar,\
-               ext/commons-logging-1.1.1.jar,\
-               ext/slf4j/jul-to-slf4j-1.6.4.jar
+               ext/commons-logging-1.1.1.jar
