Added missing pom-filer for slf4j. case 1331

--- a/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
@@ -125,6 +125,7 @@
         <module>../com.dynamo.cr.templates</module>
         <module>../javax.media.opengl</module>
         <module>../joda.time</module>
+        <module>../slf4j</module>
     </modules>
 
 </project>
