Changed default build key bindings to M1+B and shift+M1+B. case 800
* M1+T and shift+M1+T are still functional 
* Created new defold scheme in order to be able
  to override default binding (M+B)
* Default scheme is now default and eclipse-default
  (org.eclipse.ui.defaultAcceleratorConfiguration)
  is set to parent
* We should remove org.eclipse.ui.defaultAcceleratorConfiguration
  as parent and create a complete defold-scheme.
  See 1364 for more info

--- a/com.dynamo.cr/com.dynamo.cr.editor.ui/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor.ui/plugin.xml
@@ -64,5 +64,13 @@
          </enabledWhen>
       </handler>
    </extension>
+   <extension
+         point="org.eclipse.ui.bindings">
+      <scheme
+            id="com.dynamo.cr.editor.ui.defoldScheme"
+            name="Defold Key Bindings"
+            parentId="org.eclipse.ui.defaultAcceleratorConfiguration">
+      </scheme>
+   </extension>
 
 </plugin>
