--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin_customization.ini
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin_customization.ini
@@ -1,2 +1,3 @@
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = false
 org.eclipse.ui.ide/SAVE_ALL_BEFORE_BUILD = true
+org.eclipse.ui/KEY_CONFIGURATION_ID=com.dynamo.cr.editor.ui.defoldScheme
