--- a/com.dynamo.cr/com.dynamo.cr.luaeditor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.luaeditor/plugin.xml
@@ -29,6 +29,13 @@
             id="com.dynamo.cr.luaeditor.NewGuiScriptWizard"
             name="Gui Script File">
       </wizard>
+      <wizard
+            category="com.dynamo.cr.editor.wizardCategory"
+            class="com.dynamo.cr.luaeditor.wizards.LuaModuleNewWizard"
+            icon="icons/cog.png"
+            id="com.dynamo.cr.luaeditor.NewLuaModuleWizard"
+            name="Lua Module File">
+      </wizard>
    </extension>
    <extension
          point="org.eclipse.ui.navigator.navigatorContent">
@@ -40,6 +47,11 @@
       <commonWizard
             type="new"
             wizardId="com.dynamo.cr.luaeditor.NewGuiScriptWizard">
+         <enablement></enablement>
+      </commonWizard>
+      <commonWizard
+            type="new"
+            wizardId="com.dynamo.cr.luaeditor.NewLuaModuleWizard">
          <enablement></enablement>
       </commonWizard>
    </extension>
@@ -62,6 +74,11 @@
             id="com.dynamo.cr.luaeditor.resourcetypes.RenderScript"
             name="Render Script"
             type-class="render_script">
+      </resource-type>
+      <resource-type
+            file-extension="lua"
+            id="com.dynamo.cr.luaeditor.resourcetypes.LuaModule"
+            name="Lua Module">
       </resource-type>
    </extension>
    <extension
@@ -98,6 +115,9 @@
          </newWizardShortcut>
          <newWizardShortcut
                id="com.dynamo.cr.luaeditor.NewGuiScriptWizard">
+         </newWizardShortcut>
+         <newWizardShortcut
+               id="com.dynamo.cr.luaeditor.NewLuaModuleWizard">
          </newWizardShortcut>
       </perspectiveExtension>
    </extension>
