Added small product to personal test config. case 1345

--- a/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
@@ -90,6 +90,15 @@ products {
     name: "Free"
     handle: "free"
     fee: 0
-    max_member_count: -1
+    max_member_count: 1
     default: 1
+}
+
+products {
+    id: 1780312
+    name: "Small"
+    handle: "small"
+    fee: 20
+    max_member_count: -1
+    default: 0
 }
