ProjectProperties improvements and tests. case 1400
* Save support
* Order preservation (insert order preserved)
* Tests
* Put-support
* Get categories and keys for category support

--- a/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
@@ -86,6 +86,7 @@
         <module>../com.dynamo.cr.common.test</module>
         <module>../com.dynamo.cr.editor</module>
         <module>../com.dynamo.cr.editor.core</module>
+        <module>../com.dynamo.cr.editor.core.test</module>
         <module>../com.dynamo.cr.editor.fs</module>
         <module>../com.dynamo.cr.editor.fs.test</module>
         <module>../com.dynamo.cr.editor.ui</module>
