Temp hiding bundle app menu option (is_dev). case 1407

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -185,6 +185,12 @@
                commandId="com.dynamo.cr.target.commands.bundle"
                label="Bundle App..."
                style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <test
+                     property="com.dynamo.cr.editor.is_dev">
+               </test>
+            </visibleWhen>
          </command>
       </menuContribution>
       <menuContribution
