Changed sprite.subpixels type to bool. case 1401

--- a/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
+++ b/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
@@ -152,7 +152,7 @@ max_count.type = integer
 max_count.help = max number of sprites, 128 by default
 max_count.default = 128
 
-subpixels.type = integer
+subpixels.type = bool
 subpixels.help = whether to allow sprites to appear unaligned with respect to pixels, 1 for yes (default) and 0 for no
 subpixels.default = 1
 
