--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -13,6 +13,7 @@ signed_engine_root: "tmp/engine_root"
 billing_shared_key: "vw2IIZFExzi1C1-1BW-q"
 billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
+open_registration_max_users: 10
 
 invitation_template {
     from: "\"Defold\" <info@defold.se>"
