--- a/com.dynamo.cr/com.dynamo.cr.go/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.go/plugin.xml
@@ -408,13 +408,13 @@
       <tip
             editor-id="com.dynamo.cr.go.editors.CollectionEditor"
             link="See &lt;a href=&quot;http://www.defold.com/doc/scene_editing&quot;&gt;Scene Editing&lt;/a&gt; for more info."
-            tip="Tracking: Alt + Right Button (Three Button) or Option + Ctrl + Mouse Button (One Button)\nDollying: Alt + Middle Button (Three Button) or Ctrl + Mouse Button (One Button)\nOpen the Scene menu for more useful operations"
-            title="Navigation">
+            tip="Tracking: Alt + Right Button (Three Button) or Option + Ctrl + Mouse Button (One Button)\nDollying: Alt + Middle Button (Three Button) or Ctrl + Mouse Button (One Button)\nSnapping: Shift while manipulating objects\nOpen the Scene menu for more useful operations"
+            title="Hot Keys">
       </tip>
       <tip
             editor-id="com.dynamo.cr.go.ui.goEditor"
             link="See &lt;a href=&quot;http://www.defold.com/doc/scene_editing&quot;&gt;Scene Editing&lt;/a&gt; for more info."
-            tip="Use the Q, W and R keys to enable different manipulators for the selected objects.\nOpen the Scene menu for more useful operations."
+            tip="Use the Q, W and R keys to enable different manipulators for the selected objects.\nSnapping: Shift while manipulating objects.\nOpen the Scene menu for more useful operations."
             title="Manipulators">
       </tip>
    Navigation tip:\nTracking: Alt + Right Button (Three Button) or Option + Ctrl + Mouse Button (One Button)\nDollying: Alt + Middle Button (Three Button) or Ctrl + Mouse Button (One Button)</extension>
