Fixed some copy for sign up. case 1362

--- a/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
@@ -16,6 +16,7 @@ billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 redirectDownloadsHost: "cr.defold.com"
 redirectDownloadsPort: 8080
+open_registration_max_users: 1
 
 invitation_template {
     from: "\"Defold\" <info@defold.se>"
