Mac OSX bundling support. case 1395
* New game.project section osx with
 - app_icon and bundle_identifier
* New project.version option
* Initial guide
* Additional project-editor hacks (.icns and
  the compiled 'c' suffix)
* Moved .plist resources to platform directory

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -182,8 +182,19 @@
                style="push">
          </command>
          <command
-               commandId="com.dynamo.cr.target.commands.bundle"
-               label="Bundle App..."
+               commandId="com.dynamo.cr.target.commands.bundleiOS"
+               label="Bundle iOS Application..."
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <test
+                     property="com.dynamo.cr.editor.is_dev">
+               </test>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="com.dynamo.cr.target.commands.bundleOSX"
+               label="Bundle OSX Application..."
                style="push">
             <visibleWhen
                   checkEnabled="false">
@@ -303,8 +314,13 @@
       </command>
       <command
             defaultHandler="com.dynamo.cr.editor.handlers.BundleiOSHandler"
-            id="com.dynamo.cr.target.commands.bundle"
-            name="Bundle Application">
+            id="com.dynamo.cr.target.commands.bundleiOS"
+            name="Bundle iOS Application">
+      </command>
+      <command
+            defaultHandler="com.dynamo.cr.editor.handlers.BundleOSXHandler"
+            id="com.dynamo.cr.target.commands.bundleOSX"
+            name="Bundle OSX Application">
       </command>
       <command
             id="com.dynamo.cr.editor.commands.openWelcome"
