--- a/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
+++ b/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
@@ -2,6 +2,9 @@
 help = General project settings
 title.type = string
 title.help = the title of the application
+title.default = unnamed
+version.type = string
+version.help = application version
 
 [display]
 help = Resolution and other display related settings
@@ -167,3 +170,13 @@ help = GameObject factory related settings
 max_count.type = integer
 max_count.help = max number of factories, 128 by default
 max_count.default = 128
+
+[osx]
+help = Mac OSX related settings
+app_icon.type = resource
+app_icon.help = bundle icon file (.icns)
+app_icon.default =
+
+bundle_identifier.type = string
+bundle_identifier.help = bundle identifier (CFBundleIdentifier)
+bundle_identifier.default = example.unnamed
