Archive bundling (OSX) and engine support. case 1423 * Bob  - createOrder option for control over task    creation order  - Set content from stream. Good for large files * Moved apache codec to common * New GameProjectBuilder  - game.project copy builder  - disk archive builder * Engine  - If archive game.arc is found next to game.projectc    the archive is used * dmPath fix  - Single component path should return empty    string, e.g. foo

--- a/com.dynamo.cr/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.common/build.properties
@@ -27,4 +27,6 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/upnp.jar,\
                ext/commons-configuration-1.8.jar,\
                ext/commons-lang-2.6.jar,\
-               ext/commons-logging-1.1.1.jar
+               ext/commons-logging-1.1.1.jar,\
+               DYNAMO_HOME/share/java/resource_archive.jar,\
+               ext/commons-codec-1.5.jar
