--- a/com.dynamo.cr/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr/com.dynamo.cr.common/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/commons-codec-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/resource_archive.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-configuration-1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-lang-2.6.jar"/>
