Win32 bundle support. case 1396
* IconExe.java is exact copy-paste, apart from 
  package name, from eclipse juno 4.2

--- a/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
+++ b/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
@@ -180,3 +180,10 @@ app_icon.default =
 bundle_identifier.type = string
 bundle_identifier.help = bundle identifier (CFBundleIdentifier)
 bundle_identifier.default = example.unnamed
+
+[windows]
+help = Windows related settings
+app_icon.type = resource
+app_icon.help = executable icon file (.ico)
+app_icon.default =
+
