--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -203,6 +203,17 @@
                </test>
             </visibleWhen>
          </command>
+         <command
+               commandId="com.dynamo.cr.target.commands.bundleWin32"
+               label="Bundle Windows Application..."
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <test
+                     property="com.dynamo.cr.editor.is_dev">
+               </test>
+            </visibleWhen>
+         </command>
       </menuContribution>
       <menuContribution
             allPopups="false"
@@ -321,6 +332,11 @@
             defaultHandler="com.dynamo.cr.editor.handlers.BundleOSXHandler"
             id="com.dynamo.cr.target.commands.bundleOSX"
             name="Bundle OSX Application">
+      </command>
+      <command
+            defaultHandler="com.dynamo.cr.editor.handlers.BundleWin32Handler"
+            id="com.dynamo.cr.target.commands.bundleWin32"
+            name="Bundle Windows Application">
       </command>
       <command
             id="com.dynamo.cr.editor.commands.openWelcome"
