Refactored iOS bundling. case 1427
* game.project is used for common configuration
* Fixed icon-bug. See comment about bug in 
  XMLPropertyListConfiguration
* New IOSBundlerTest

--- a/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
+++ b/com.dynamo.cr/com.dynamo.cr.projed/src/com/dynamo/cr/projed/meta.properties
@@ -171,6 +171,24 @@ max_count.type = integer
 max_count.help = max number of factories, 128 by default
 max_count.default = 128
 
+[ios]
+help = iOS related settings
+app_icon_57x57.type = resource
+app_icon_57x57.help = iPhone icon file (.png)
+app_icon_114x114.type = resource
+app_icon_114x114.help = retina iPhone bundle icon file (.png)
+app_icon_72x72.type = resource
+app_icon_72x72.help = iPad icon file (.png)
+app_icon_144x144.type = resource
+app_icon_144x144.help = retina iPad bundle icon file (.png)
+
+pre_renderered_icons.type = bool
+pre_renderered_icons.help = set to true if the icons are prerendered
+
+bundle_identifier.type = string
+bundle_identifier.help = bundle identifier (CFBundleIdentifier)
+bundle_identifier.default = example.unnamed
+
 [osx]
 help = Mac OSX related settings
 app_icon.type = resource
