--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -3,7 +3,7 @@ branch_root: "/tmp/br"
 filters: ".*?\\.git"
 service_port: 9998
 build_data_port: 6000
-persistence_unit_name: "unit-test"
+persistence_unit_name: "local-developer"
 repository_root: "/tmp/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 builtins_directory: "/Users/chmu/tmp/dynamo-home/content/builtins"
