Changed chargify keys for tests. case 1437

--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -10,9 +10,9 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 signed_engine_root: "tmp/engine_root"
-billing_shared_key: "vw2IIZFExzi1C1-1BW-q"
+billing_shared_key: "fbZyk7u7B7wgcqbc1h"
 billing_api_url: "https://defold-test.chargify.com"
-billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
+billing_api_key: "pwDEp2dRry4O-wZnYVpu"
 open_registration_max_users: 10
 
 invitation_template {
